<?xml version="1.0" encoding="utf-8"?>
<resources>
    
    <!-- General Strings  -->
    <string name="app_name">Linguam</string>
    <string name="translate_activity_title">Linguam - Translate</string>
    <string name="game_activity_title">Linguam - Game</string>
    <string name="menu_settings">Settings</string>
    <string name="version_settings">Version</string>

    <!-- Translate Button Strings  -->
    <string name="tanslate_button">Translate</string>
    <string name="translate_word_hint">Type a word</string>
    <string name="translate_no_result">No result found</string>
    <string name="translate_possible_translation">Possible Translations:</string>
    <string name="already_traslated">You already looked for this word(%s), let\'s play? :)</string>
    <string name="translation_saved">Translation saved: %1$s(%2$s)</string>
    <string name="no_internet_connection">No internet connection</string>
        
    <!-- Main Activity icon text -->
    <string name="ictext_search">Find your word!</string>
    <string name="ictext_play">Let\'s play!</string>
    <string name="no_words">You need at least 10 words to play</string>
    
    <!-- Play Button Strings  -->
    <string name="playgame_button">Play</string>
    <string name="check_button">Check</string>
    <string name="text_level5_hint">Type your answer</string>
    <string name="no_more_words">Uau you\'re amazing!! Please search more words to continue playing</string>
    <string name="correct">CORRECT</string>
    <string name="incorrect">INCORRECT</string>
    <string name="correct_asnwer">CORRECT ANSWER:</string>
        
    <!--  Score Strings -->
	<string name="score">TOTAL SCORE:</string>
	<string name="level">WORD LEVEL:</string>
	
	<!--  Drawable Menu & Action Bar Title -->
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
	<string name="select_language">Select language to play</string>
	<string name="spanish_speaker">Para castellanohablantes</string>
	<string name="french_speaker">Pour francophone</string>
	<string name="italian_speaker">Per italofoni</string>
	<string name="english_speaker">For english speaker</string>
	<string name="portuguese_speaker">Para falantes de português</string>
    
    <!--  Levels -->
    <string name="level1">Level1</string>
    <string name="level2">Level2</string>
    <string name="level3">Level3</string>
    <string name="level4">Level4</string>
    <string name="level5">Level5</string>
    <string name="all_together">All Together</string>
    
    <!--  Language Mapping -->
    <string name="es">Spanish vocab</string>
    <string name="fr">French vocab</string>
    <string name="it">Italian vocab</string>
    <string name="en">English vocab</string>
    <string name="pt">Portuguese vocab</string>
    

</resources>
