<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

   <LinearLayout
       android:id="@+id/LinearLayout_global"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:baselineAligned="false"
       android:orientation="vertical" >
	   
	   <LinearLayout
	        android:id="@+id/LinearLayout_top"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:baselineAligned="false"
	        android:background="@color/GreySoft"
	        android:divider="@drawable/vertical_divider"
	        android:dividerPadding="12dip"
	        android:showDividers="middle"
	        android:orientation="horizontal" >
    
	     <Button
	         android:id="@+id/btn_level1_top"
	         android:layout_width="158dp"
	         android:layout_height="wrap_content"
	         android:layout_weight="0.64"
	         android:background="@drawable/button_state_selector"
	         android:text="@string/level1"
	         android:textColor="@drawable/button_state_selector" />
	     
	      <Button
	         android:id="@+id/btn_level2_top"
	         android:layout_width="158dp"
	         android:layout_height="wrap_content"
	         android:layout_weight="0.64"
	         android:background="@drawable/button_state_selector"
	         android:text="@string/level2"
	         android:textColor="@drawable/button_state_selector" />
	        
	      <Button
	         android:id="@+id/btn_level3_top"
	         android:layout_width="158dp"
	         android:layout_height="wrap_content"
	         android:layout_weight="0.64"
	         android:background="@drawable/button_state_selector"
	         android:text="@string/level3"
	         android:textColor="@drawable/button_state_selector" />
	      
	      <Button
	         android:id="@+id/btn_level4_top"
	         android:layout_width="158dp"
	         android:layout_height="wrap_content"
	         android:layout_weight="0.64"
	         android:background="@drawable/button_state_selector"
	         android:text="@string/level4"
	         android:textColor="@drawable/button_state_selector" />
	      
	      <Button
	         android:id="@+id/btn_level5_top"
	         android:layout_width="158dp"
	         android:layout_height="wrap_content"
	         android:layout_weight="0.64"
	         android:background="@drawable/button_state_selector"
	         android:text="@string/level5"
	         android:textColor="@drawable/button_state_selector" />
	        
	    
    </LinearLayout>
    
	<LinearLayout 
	    android:id="@+id/LinearLayout1"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:baselineAligned="false"
	    android:orientation="vertical" >
	
	    <RelativeLayout
	        android:layout_width="match_parent"
	        android:layout_height="100dp"
	        android:orientation="horizontal" >
	
	        
	        <TextView
	            android:id="@+id/tvScore"
	            android:layout_width="wrap_content"
	            android:layout_height="100dp"
	            android:text="@string/score"
	            android:layout_alignParentLeft="true"
	            android:layout_margin="20dp"
	            android:textColor="#000000"
	            android:textSize="16sp" >
	        </TextView>
	        
	                
	        <TextView
	            android:id="@+id/tvLevel"
	            android:layout_width="wrap_content"
	            android:layout_height="100dp"
	            android:text="@string/level"
	            android:layout_alignParentRight="true"
	            android:layout_margin="20dp"
	            android:textColor="#000000"
	            android:textSize="16sp" >
	        </TextView>
	        
	        
	    </RelativeLayout>
	
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="100dip"
	        android:layout_gravity="bottom"
	        android:orientation="horizontal"
	        android:layout_marginBottom="50dp" >
	
	        <TextView
	            android:id="@+id/tvGamingWord"
	            android:layout_width="match_parent"
	            android:layout_height="match_parent"
	            android:background="@android:color/transparent"
	            android:drawablePadding="20dp"
	            android:gravity="center_horizontal"
	            android:paddingTop="32sp"
	            android:textAlignment="center"
	            android:textColor="#000000"
	            android:textSize="20sp" />
	
	    </LinearLayout>
	
	
	</LinearLayout>
	
</LinearLayout>
<!-- The main content view -->

    <!-- The main content view -->
    <FrameLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
    
    
    <!-- The navigation drawer -->
    <ListView android:id="@+id/left_drawer"
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:choiceMode="singleChoice"
        android:divider="#666"
        android:dividerHeight="1dp"
        android:background="@android:color/white"
        android:paddingLeft="15sp"
        android:paddingRight="15sp"
        />

</android.support.v4.widget.DrawerLayout>